Fix the issue with resource links and their icons being on separate lines when their container gets too small

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -569,13 +569,14 @@ a.card:hover {
   width: 80%;
   text-align: center;
   margin: {
-    top: 2rem;
+    top: 1.5rem;
     bottom: 1rem;
   }
 }
 
 .resource-link {
-  margin: 0 1rem;
+  margin: 0.5rem 1rem;
+  display: inline-block;
 }
 
 .resource-link-icon {
